Change generated Getters to have a 'get' prefix (#655)
* Change generated Getters to have a 'get' prefix

* Remove unused method

* Fix integ tests

* Use Method escaper. Fix getter names for booleans